Improve KickStart installation manifest format, implemented multi-loader support in KickStart